# acc_n33bec

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
Electronica/EAGLE ADAPTADOR/: AdaptadorAcceso.b#1  AdaptadorAcceso.b#2  AdaptadorAcceso.b#3  AdaptadorAcceso.b#4  AdaptadorAcceso.b#5  AdaptadorAcceso.b#6  AdaptadorAcceso.b#7  AdaptadorAcceso.b#8  AdaptadorAcceso.b#9  AdaptadorAcceso.brd  AdaptadorAcceso.fab  AdaptadorAcceso.s#3  AdaptadorAcceso.s#5  AdaptadorAcceso.s#6  AdaptadorAcceso.s#7  AdaptadorAcceso.s#9  AdaptadorAcceso.sch
Electronica/EAGLE ADAPTADOR/CAMOutputs/Assembly/: AdaptadorAcceso.txt
Electronica/EAGLE ADAPTADOR/CAMOutputs/DrillFiles/: drill_1_16.xln
Electronica/EAGLE ADAPTADOR/CAMOutputs/GerberFiles/: copper_bottom.gbr  (+7 more)
Hardware/: Control Acceso Doble Faz.brd
Hardware/ACCESS CONTROL BOARD/: Control Acceso Doble Faz.b##  Control Acceso Doble Faz.sch
Hardware/EAGLE ADAPTADOR/: AdaptadorAcceso.b#1  AdaptadorAcceso.b#2  AdaptadorAcceso.b#4  AdaptadorAcceso.b#5  AdaptadorAcceso.b#7  AdaptadorAcceso.brd  AdaptadorAcceso.s#1  AdaptadorAcceso.s#2  AdaptadorAcceso.s#3  AdaptadorAcceso.s#6  AdaptadorAcceso.s#7  AdaptadorAcceso.sch
main/: CMakeLists.txt  Kconfig.projbuild  beep.c  beep.h  card_store.c  card_store.h  config.c  config.h  eth_connect.c  example_common_private.h  fs.c  http.c  idf_component.yml  log_store.c  log_store.h  main.c  processor.c  rtc.c  rtc.h  system_event.h  time_sync.c  time_sync.h  wiegand.c  wiegand_local.h  wifi.c  ws.c
spiffs/: app.js  index.html  style.css
web/: app.js  index.html  style.css
